--- a/public/assets/css/modern-vertical/style.css
+++ b/public/assets/css/modern-vertical/style.css
@@ -12047,7 +12047,7 @@ textarea.is-invalid.tt-hint {
   flex-direction: column;
   width: 100%;
   pointer-events: auto;
-  background-color: #000000;
+  background-color: #191c24;
   background-clip: padding-box;
   border: 1px solid #2c2e33;
   border-radius: 0.3rem;
@@ -23751,14 +23751,17 @@ footer .footer-box
 /* Let's get this party started */
 .preview-list.multiplex::-webkit-scrollbar,
 .fixed-hight::-webkit-scrollbar,
-.wizard ::-webkit-scrollbar {
+.wizard::-webkit-scrollbar,
+.modal-body::-webkit-scrollbar
+ {
   width: 12px;
 }
 
 /* Track */
 .preview-list.multiplex::-webkit-scrollbar-track,
 .fixed-hight::-webkit-scrollbar-track,
-.wizard ::-webkit-scrollbar-track {
+.wizard::-webkit-scrollbar-track,
+.modal-body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px dark;
 
 }
@@ -23766,7 +23769,8 @@ footer .footer-box
 /* Handle */
 .preview-list.multiplex::-webkit-scrollbar-thumb,
 .fixed-hight::-webkit-scrollbar-thumb,
-.wizard ::-webkit-scrollbar-thumb  {
+.wizard::-webkit-scrollbar-thumb,
+.modal-body::-webkit-scrollbar-thumb  {
 
   background: dark;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
@@ -23774,6 +23778,7 @@ footer .footer-box
 
 #monitor .option ,
 #logs .option
+
 {
   margin-right: 5px;
   font-size: 20px;
@@ -23797,4 +23802,10 @@ footer .footer-box
   width: 40px;
   height: auto;
   max-width: 50px ;
+}
+
+.modal-body
+{
+    max-height: 60vh;
+    overflow-y: auto;
 }
