--- a/public/assets/css/modern-vertical/style.css
+++ b/public/assets/css/modern-vertical/style.css
@@ -10781,7 +10781,7 @@ textarea.is-invalid.tt-hint {
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
     color: #ffffff;
-    background-color: black;
+    background-color: #2c2e33;
     border-color: #2c2e33 #2c2e33 black; }
   .nav-tabs .dropdown-menu {
     margin-top: -1px;
