--- a/public/assets/css/modern-vertical/style.css
+++ b/public/assets/css/modern-vertical/style.css
@@ -10420,7 +10420,7 @@ textarea.is-invalid.tt-hint {
   background-color: transparent;
   border: 0; }
   .dropdown-item:hover, .dropdown-item:focus {
-    color: #1e2125;
+    color: #fff;
     background-color: #13151b; }
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
@@ -23813,4 +23813,10 @@ footer .footer-box
 .tab-content .card
 {
   text-align: left !important ;
+}
+
+table .dropdown-item,
+table .btn
+{
+    padding: 10px 15px !important ;
 }
