--- a/public/assets/css/modern-vertical/style.css
+++ b/public/assets/css/modern-vertical/style.css
@@ -18485,7 +18485,7 @@ div.tagsinput {
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  background-color: rgba(252, 66, 74, 0.8);
+  background-color: #287ceb;
   margin: 35px 5px; }
 
 .jumping-dots-loader span:nth-child(1) {
