add link movies SPLs

--- a/assets/css/modern-vertical/style.css
+++ b/assets/css/modern-vertical/style.css
@@ -23735,7 +23735,7 @@ footer .footer-box
 .preview-list.multiplex ,
 .fixed-hight
 {
-  margin: 5px;
+/*  margin: 5px;*/
   padding: 5px;
 
   height: 450px;
