add check missing cpls in schedule

--- a/assets/css/modern-vertical/style.css
+++ b/assets/css/modern-vertical/style.css
@@ -23848,7 +23848,7 @@ table td a
 .modal-body
 {
     padding: 5px;
-    height: 450px;
+    max-height: 450px;
     overflow: auto;
     text-align: justify;
     overflow-x: hidden;
