--- a/assets/css/modern-vertical/style.css
+++ b/assets/css/modern-vertical/style.css
@@ -23710,6 +23710,16 @@ footer .footer-box
     color : #61c4d8 !important;
 }
 
+.icon-user-performance i
+{
+    color : #e242fc !important;
+}
+
+.user-shadow
+{
+    box-shadow: 0px -44px 41px #e242fc;
+}
+
 .breadcrumb-item a
 {
   color: rgba(255, 255, 255, 0.8) ;
