--- a/assets/css/modern-vertical/style.css
+++ b/assets/css/modern-vertical/style.css
@@ -23911,3 +23911,14 @@ table td a
     line-height: 0;
     background: #121a2f;
 }
+.dataTables_processing.card, .jumping-dots-loader
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    margin-left: -100px;
+    margin-top: -26px;
+    text-align: center;
+    padding: 1em 0;
+}
